fixed gap in navigation

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,7 @@ img {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-right: 76px;
 }
 
 /* сброс настроек для списка */
@@ -59,7 +60,7 @@ img {
 }
 .site-nav {
   display: flex;
-  margin-left: 76px;
+  gap: 40px;
 }
 .site-nav .link {
   display: block;
@@ -75,9 +76,9 @@ img {
   letter-spacing: 0.02em;
 }
 
-.site-nav .item:not(:last-child) {
+/* .site-nav .item:not(:last-child) {
   margin-right: 40px;
-}
+} */
 
 .link {
   text-decoration: none;
@@ -90,11 +91,12 @@ img {
 .address {
   display: flex;
   font-style: normal;
+  gap: 40px;
 }
 
-.address .item + .item {
+/* .address .item + .item {
   margin-left: 40px;
-}
+} */
 .address .link {
   color: var(--primary-text-color);
   font-weight: 400;
